--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -166,7 +166,11 @@ $(function() {
         <h3>Game Instructions</h3>
     </div>
     <div class="modal-body">
-        <p>Here we need instructions...</p>
+        <p>
+            <span class="control_key">=</span> Zoom In<br>
+            <span class="control_key">-</span> Zoom Out<br>
+
+        </p>
     </div>
     <div class="modal-footer">
         <a href="#" class="btn btn-primary btn-success" data-dismiss="modal">Got It!</a>
