--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -169,7 +169,12 @@ $(function() {
         <p>
             <span class="control_key">=</span> Zoom In<br>
             <span class="control_key">-</span> Zoom Out<br>
-
+            <span class="control_key">wasd</span> Move Player<br>
+            <span class="control_key">tfgh</span> Make Barricades<br>
+            <span class="control_key">ijkl</span> Break Barricades<br>
+            <span class="control_key">n</span> Pick Up Ammo Crate<br>
+            <span class="control_key">m</span> Drop Ammo Crate<br>
+            <span class="control_key">arrow keys</span> Move Camera<br>
         </p>
     </div>
     <div class="modal-footer">
