--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -167,13 +167,13 @@ $(function() {
     </div>
     <div class="modal-body">
         <p>
-            <span class="control_key">=</span> Zoom In<br>
-            <span class="control_key">-</span> Zoom Out<br>
-            <span class="control_key">wasd</span> Move Player<br>
-            <span class="control_key">tfgh</span> Make Barricades<br>
-            <span class="control_key">ijkl</span> Break Barricades<br>
-            <span class="control_key">n</span> Pick Up Ammo Crate<br>
-            <span class="control_key">m</span> Drop Ammo Crate<br>
+            <span class="control_key big">=</span> Zoom In<br>
+            <span class="control_key big">-</span> Zoom Out<br>
+            <span class="control_key big">WASD</span> Move Player<br>
+            <span class="control_key big">TFGH</span> Make Barricades<br>
+            <span class="control_key big">IJKL</span> Break Barricades<br>
+            <span class="control_key big">N</span> Pick Up Ammo Crate<br>
+            <span class="control_key big">M</span> Drop Ammo Crate<br>
             <span class="control_key">arrow keys</span> Move Camera<br>
         </p>
     </div>
