--- a/game/static/css/style.css
+++ b/game/static/css/style.css
@@ -128,11 +128,14 @@ margin-left: 10px;
 }
 
 .control_key {
+width: 80px;
+text-align: right;
+margin-right: 10px;
+display: inline-block;
+}
+.big {
 font-weight: bold;
 font-size: 150%;
-width: 50px;
-text-align: right;
-display: inline-block;
 }
 
 .error {
