Awesome things happening

--- a/game/static/css/style.css
+++ b/game/static/css/style.css
@@ -127,6 +127,10 @@ margin-left: 10px;
 margin-left: 10px;
 }
 
+#instruction_label {
+text-align: center;
+}
+
 .control_key {
 width: 80px;
 text-align: right;
