--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -152,6 +152,7 @@ $(function() {
                 <i class="icon-arrow-down icon-white"></i>
             </a>
         </p>
+        <p id="instruction_label"></p>
     </div>
 
     <div style="padding: 10px">
