Flashing an instruction to select action

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -132,23 +132,23 @@ $(function() {
 
         <p>&nbsp;</p>
         <p>
-            <a class="btn btn-success arrow_btn" id="btn_arrow_up" href="#">
+            <a class="btn btn-success arrow_btn disabled" id="btn_arrow_up" href="#">
                 <i class="icon-arrow-up icon-white"></i>
             </a>
         </p>
         <p>
-            <a class="btn btn-success arrow_btn" id="btn_arrow_left" href="#">
+            <a class="btn btn-success arrow_btn disabled" id="btn_arrow_left" href="#">
                 <i class="icon-arrow-left icon-white"></i>
             </a>
             <a class="btn btn-success arrow_btn disabled" id="btn_arrow_go" href="#">
                 GO
             </a>
-            <a class="btn btn-success arrow_btn" id="btn_arrow_right" href="#">
+            <a class="btn btn-success arrow_btn disabled" id="btn_arrow_right" href="#">
                 <i class="icon-arrow-right icon-white"></i>
             </a>
         </p>
         <p>
-            <a class="btn btn-success arrow_btn" id="btn_arrow_down" href="#">
+            <a class="btn btn-success arrow_btn disabled" id="btn_arrow_down" href="#">
                 <i class="icon-arrow-down icon-white"></i>
             </a>
         </p>
