--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -138,6 +138,19 @@ $(function() {
     </div>
 </div>
 
+<div id="error_modal" class="modal hide">
+    <div class="modal-header">
+        <h3>Oops! An error has occurred.</h3>
+    </div>
+    <div class="modal-body">
+        <p>It looks like that <span id="error_reason"></span</p>
+        <p>You will now be redirected to the main page where you can create or join a different game.</p>
+    </div>
+    <div class="modal-footer">
+        <a href="#" class="btn btn-primary btn-success" data-dismiss="modal">Fine</a>
+    </div>
+</div>
+
 <img src="/static/img/houseplan.jpg" class="sprite" id="house" />
 <img src="/static/img/snail_teeth.png" class="sprite" id="snail" />
 <img src="/static/img/ghost_gun.png" class="sprite" id="ghost" />
