More nice error messages

--- a/game/templates/game/base.html
+++ b/game/templates/game/base.html
@@ -12,6 +12,10 @@
 
 <body>
 
+<div id="error_modal" class="modal hide">
+    {% block error_modal %}{% endblock %}
+</div>
+
 <div class="container_12">
 
 <div class="grid_12" id="headline">
