Go callback under construction

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -156,33 +156,33 @@ $(function() {
 <div class="grid_3 alpha">
     <div style="padding: 10px; height: 530px">
         <p>
-            <a class="btn btn-success control_btn_left" id="btn_move" href="#">Move</a>
-            <a class="btn btn-success control_btn_right" id="btn_barricade" href="#">Barricade</a>
+            <a class="btn btn-success control_btn_left" id="btn_move" href="#" data-action="Move">Move</a>
+            <a class="btn btn-success control_btn_right" id="btn_barricade" href="#" data-action="Barricade">Barricade</a>
         </p>
         <p>
-            <a class="btn btn-success control_btn_left" id="btn_shoot" href="#">Shoot</a>
-            <a class="btn btn-success control_btn_right" id="btn_reload" href="#">Reload</a>
+            <a class="btn btn-success control_btn_left" id="btn_shoot" href="#" data-action="Shoot">Shoot</a>
+            <a class="btn btn-success control_btn_right" id="btn_reload" href="#" data-action="Reload">Reload</a>
         </p>
 
         <p>&nbsp;</p>
         <p>
-            <a class="btn btn-success arrow_btn disabled" id="btn_arrow_up" href="#">
+            <a class="btn btn-success arrow_btn disabled" id="btn_arrow_up" href="#" data-direction="Up">
                 <i class="icon-arrow-up icon-white"></i>
             </a>
         </p>
         <p>
-            <a class="btn btn-success arrow_btn disabled" id="btn_arrow_left" href="#">
+            <a class="btn btn-success arrow_btn disabled" id="btn_arrow_left" href="#" data-direction="Left">
                 <i class="icon-arrow-left icon-white"></i>
             </a>
             <a class="btn btn-success arrow_btn disabled" id="btn_arrow_go" href="#">
                 GO
             </a>
-            <a class="btn btn-success arrow_btn disabled" id="btn_arrow_right" href="#">
+            <a class="btn btn-success arrow_btn disabled" id="btn_arrow_right" href="#" data-direction="Right">
                 <i class="icon-arrow-right icon-white"></i>
             </a>
         </p>
         <p>
-            <a class="btn btn-success arrow_btn disabled" id="btn_arrow_down" href="#">
+            <a class="btn btn-success arrow_btn disabled" id="btn_arrow_down" href="#" data-direction="Down">
                 <i class="icon-arrow-down icon-white"></i>
             </a>
         </p>
