--- a/game/templates/game/base.html
+++ b/game/templates/game/base.html
@@ -19,7 +19,7 @@
 <div class="container_12">
 
 <div class="grid_12" id="headline">
-    <h1>Snails</h1>
+    <h1><a href="/">Snails</a></h1>
     <p>&ldquo;The best game of 2012&rdquo; -- anonymous</p>
 </div>
 
