Wide Show instructions button

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -180,7 +180,7 @@ $(function() {
     </div>
 
     <div style="padding: 10px">
-        <a class="btn btn-success" href="#" id="btn_show_instructions">
+        <a class="btn btn-success" href="#" id="btn_show_instructions" style="width: 180px">
             <i class="icon-info-sign icon-white"></i> Show Instructions
         </a>
     </div>
