--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -145,13 +145,20 @@ $(function() {
 <canvas id="canvas" class="grid_9 alpha"></canvas>
 <div class="grid_3 alpha">
     <div style="padding: 10px; height: 530px">
+        <p style="text-align: right">Ammo: <span style="color: green; font-size: 250%">2</span> / 5</p>
+
+        <p>&nbsp;</p>
         <p>
             <a class="btn btn-success control_btn_left" id="btn_move" href="#" data-action="Move">Move</a>
-            <a class="btn btn-success control_btn_right" id="btn_barricade" href="#" data-action="Barricade">Barricade</a>
+            <a class="btn btn-success control_btn_right" id="btn_skip_go" href="#" data-action="Skip Go">Skip Go</a>
         </p>
         <p>
             <a class="btn btn-success control_btn_left" id="btn_shoot" href="#" data-action="Shoot">Shoot</a>
             <a class="btn btn-success control_btn_right" id="btn_reload" href="#" data-action="Reload">Reload</a>
+        </p>
+        <p>
+            <a class="btn btn-success control_btn_left" id="btn_barricade" href="#" data-action="Barricade">Barricade</a>
+            <a class="btn btn-success control_btn_right" id="btn_debarricade" href="#" data-action="Debarricade">Debarricade</a>
         </p>
 
         <p>&nbsp;</p>
@@ -180,7 +187,7 @@ $(function() {
     </div>
 
     <div style="padding: 10px">
-        <a class="btn btn-success" href="#" id="btn_show_instructions" style="width: 180px">
+        <a class="btn btn-success" href="#" id="btn_show_instructions" style="width: 176px">
             <i class="icon-info-sign icon-white"></i> Show Instructions
         </a>
     </div>
