--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -148,41 +148,47 @@ $(function() {
         <p style="text-align: right">Ammo: <span style="color: green; font-size: 250%">2</span> / 5</p>
 
         <p>&nbsp;</p>
+        {% with 'btn btn-success control_btn_left' as action_left %}
+        {% with 'btn btn-success control_btn_right' as action_right %}
         <p>
-            <a class="btn btn-success control_btn_left" id="btn_move" href="#" data-action="Move">Move</a>
-            <a class="btn btn-success control_btn_right" id="btn_skip_go" href="#" data-action="Skip Go">Skip Go</a>
+            <a class="{{ action_left }}" id="btn_move" href="#" data-action="Move">Move</a>
+            <a class="{{ action_right }}" id="btn_shoot" href="#" data-action="Shoot">Shoot</a>
         </p>
         <p>
-            <a class="btn btn-success control_btn_left" id="btn_shoot" href="#" data-action="Shoot">Shoot</a>
-            <a class="btn btn-success control_btn_right" id="btn_reload" href="#" data-action="Reload">Reload</a>
+            <a class="{{ action_left }}" id="btn_ammo" href="#" data-action="Ammo">Get Ammo</a>
+            <a class="{{ action_right }}" id="btn_reload" href="#" data-action="Reload">Reload</a>
         </p>
         <p>
-            <a class="btn btn-success control_btn_left" id="btn_barricade" href="#" data-action="Barricade">Barricade</a>
-            <a class="btn btn-success control_btn_right" id="btn_debarricade" href="#" data-action="Debarricade">Debarricade</a>
+            <a class="{{ action_left }}" id="btn_barricade" href="#" data-action="Barricade">Barricade</a>
+            <a class="{{ action_right }}" id="btn_debarricade" href="#" data-action="Debarricade">Debarricade</a>
         </p>
+        {% endwith %}
+        {% endwith %}
 
         <p>&nbsp;</p>
+        {% with 'btn btn-success arrow_btn disabled' as arrow %}
         <p>
-            <a class="btn btn-success arrow_btn disabled" id="btn_arrow_up" href="#" data-direction="Up">
+            <a class="{{ arrow }}" id="btn_arrow_up" href="#" data-direction="Up">
                 <i class="icon-arrow-up icon-white"></i>
             </a>
         </p>
         <p>
-            <a class="btn btn-success arrow_btn disabled" id="btn_arrow_left" href="#" data-direction="Left">
+            <a class="{{ arrow }}" id="btn_arrow_left" href="#" data-direction="Left">
                 <i class="icon-arrow-left icon-white"></i>
             </a>
-            <a class="btn btn-success arrow_btn disabled" id="btn_arrow_go" href="#">
+            <a class="{{ arrow }}" id="btn_arrow_go" href="#">
                 GO
             </a>
-            <a class="btn btn-success arrow_btn disabled" id="btn_arrow_right" href="#" data-direction="Right">
+            <a class="{{ arrow }}" id="btn_arrow_right" href="#" data-direction="Right">
                 <i class="icon-arrow-right icon-white"></i>
             </a>
         </p>
         <p>
-            <a class="btn btn-success arrow_btn disabled" id="btn_arrow_down" href="#" data-direction="Down">
+            <a class="{{ arrow }}" id="btn_arrow_down" href="#" data-direction="Down">
                 <i class="icon-arrow-down icon-white"></i>
             </a>
         </p>
+        {% endwith %}
         <p id="instruction_label"></p>
     </div>
 
