Added game-ajax.js, mission-critical JS code downloaded and executed early on in the game

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -134,6 +134,9 @@ $(function() {
     </div>
 </div>
 
+<!-- Need to have the AJAX requests running as early as possible. -->
+<script type="text/javascript" src="/static/js/game-ajax.js"></script>
+
 <img src="/static/img/houseplan.jpg" class="sprite" id="house" />
 <img src="/static/img/snail_teeth.png" class="sprite" id="snail" />
 <img src="/static/img/ghost_gun.png" class="sprite" id="ghost" />
