Renamed game.js to game-controls.js

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -3,7 +3,7 @@
 {% block extra_js %}
     <script type="text/javascript" src="/static/js/paper.js"></script>
     <script type="text/javascript" src="/static/js/entity.js"></script>
-    <script type="text/javascript" src="/static/js/game.js"></script>
+    <script type="text/javascript" src="/static/js/game-controls.js"></script>
 <script type = "text/javascript">
 paper.install(window);
 $(function() {
