--- a/game/templates/game/base.html
+++ b/game/templates/game/base.html
@@ -10,6 +10,7 @@
     {% block extra_css %}{% endblock %}
     <script type="text/javascript" src="/static/js/jquery-1.7.2.min.js"></script>
     <script type="text/javascript" src="/static/js/bootstrap-modal.js"></script>
+    {% block critical_js %}{% endblock %}
 </head>
 
 <body>
