--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -134,9 +134,6 @@ $(function() {
     </div>
 </div>
 
-<!-- Need to have the AJAX requests running as early as possible. -->
-<script type="text/javascript" src="/static/js/game-ajax.js"></script>
-
 <img src="/static/img/houseplan.jpg" class="sprite" id="house" />
 <img src="/static/img/snail_teeth.png" class="sprite" id="snail" />
 <img src="/static/img/ghost_gun.png" class="sprite" id="ghost" />
@@ -144,6 +141,11 @@ $(function() {
 <img src="/static/img/ammobox.png" class="sprite" id="ammobox" />
 <img src="/static/img/barricade_stairs.png" class="sprite" id="stairBarricade" />
 <img src="/static/img/barricade_door.png" class="sprite" id="doorBarricade" />
+
+<!-- Need to have the AJAX requests running as early as possible. -->
+<script type="text/javascript" src="/static/js/jquery-1.7.2.min.js"></script>
+<script type="text/javascript" src="/static/js/bootstrap-modal.js"></script>
+<script type="text/javascript" src="/static/js/game-ajax.js"></script>
 
 <canvas id="canvas" class="grid_9 alpha"></canvas>
 <div class="grid_3 alpha">
