--- a/game/templates/game/join_game.html
+++ b/game/templates/game/join_game.html
@@ -10,7 +10,7 @@
     </div>
     <div class="modal-body">
         <p>It looks like that <span id="error_reason"></span</p>
-        <p>You will now be redirected to the main page where you can create or join a different game.</p>
+        <p id="error_details">You will now be redirected to the main page where you can create or join a different game.</p>
     </div>
     <div class="modal-footer">
         <a href="#" class="btn btn-primary btn-success" data-dismiss="modal">Fine</a>
