--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -150,7 +150,7 @@ $(function() {
             <a class="{{ action_right }}" id="btn_shoot" href="#" data-action="Shoot">Shoot</a>
         </p>
         <p>
-            <a class="{{ action_left }}" id="btn_ammo" href="#" data-action="Ammo">Get Ammo</a>
+            <a class="{{ action_left }}" id="btn_ammo" href="#" data-action="Ammo">Pick up Box</a>
             <a class="{{ action_right }}" id="btn_reload" href="#" data-action="Reload">Reload</a>
         </p>
         <p>
