--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -140,7 +140,8 @@ $(function() {
 <canvas id="canvas" class="grid_9 alpha"></canvas>
 <div class="grid_3 alpha">
     <div style="padding: 10px; height: 530px">
-        <p style="text-align: right">Ammo: <span id="ammo_display" style="color: green; font-size: 250%">5</span> / 5</p>
+        <p style="text-align: right; float: right">Ammo: <span id="ammo_display">5</span> / 5</p>
+        <p><span id="your_turn_display">YOUR TURN</span></p>
 
         <p>&nbsp;</p>
         {% with 'btn btn-success control_btn_left' as action_left %}
