--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -88,8 +88,9 @@ $(function() {
 <canvas id="canvas" class="grid_9 alpha"></canvas>
 <div class="grid_3 alpha">
     <div style="padding: 10px; height: 530px">
-        <p style="text-align: right; float: right">Ammo: <span id="ammo_display">5</span> / 5</p>
-        <p><span id="your_turn_display">YOUR TURN</span></p>
+        <p style="text-align: right; float: right; margin-top: 5px">Ammo: <span id="ammo_display">5</span> / 5</p>
+        <p title="It is your turn now. Please choose an action below and click GO."><span id="your_turn_display">YOUR TURN</span></p>
+        <p style="clear: both"></p>
 
         <p>&nbsp;</p>
         {% with 'btn btn-success control_btn_left' as action_left %}
