big long instructional paragraphs

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -59,10 +59,20 @@ $(function() {
         <h3>Game Instructions</h3>
     </div>
     <div class="modal-body">
+        <p>You are a ghost, whose haunted house is under attack from evil giant snails. You must survive for as long as possible inside the house, by building barricades, shooting the snails, and running away.</p>
+        <p>Barricades prevent both snail and player movement through them until they are destroyed. Snails can destroy barricades in a few turns, but you may also destroy them if you need to get past. You may repair barricades as long as they are not currently under attack.</p>
+        <p>As long as you have at least one ammo clip, you may shoot at snails in adjacent rooms, and may shoot through barricades. Ammo clips can be picked up from the ammo box. Players may carry the ammo box, but can do nothing else while they are holding it. Other players will also not be able to take ammo from the box while it is carried.</p>
+        <p>You will be killed if at any point you are in a room with any number of snails.</p>
+        <p>&nbsp;</p>
         <p>
             <span class="control_key big">=</span> Zoom In<br>
             <span class="control_key big">-</span> Zoom Out<br>
-            <span class="control_key">arrow keys</span> Move Camera
+            <span class="control_key big">
+                <i class="icon-arrow-left"></i>
+                <i class="icon-arrow-up"></i>
+                <i class="icon-arrow-down"></i>
+                <i class="icon-arrow-right"></i>
+            </span> Move Camera
         </p>
     </div>
     <div class="modal-footer">
