--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -19,8 +19,13 @@ $(function() {
 
     view.onFrame = function(event) {
         snailUpdate();
-        player.move();
-        player.animateShoot();
+        localPlayer.move();
+        localPlayer.animateShoot();
+	for (var i = 0; i < playerList.length; i++) {
+	    var player = playerList[i];
+	    player.move();
+	    player.animateShoot();	
+	} 
     }
 
     scroll = function(movement) {
