Preview of colours in instructions modal

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -81,6 +81,14 @@ $(function() {
                 <i class="icon-arrow-right"></i>
             </span> Move Camera
         </p>
+        <p><span style="background-color: rgb(64, 64, 64)">A</span></p>
+        <p><span style="background-color: rgb(64, 192, 64)">A</span></p>
+        <p><span style="background-color: rgb(64, 64, 192)">A</span></p>
+        <p><span style="background-color: rgb(64, 192, 192)">A</span></p>
+        <p><span style="background-color: rgb(192, 64, 64)">A</span></p>
+        <p><span style="background-color: rgb(192, 64, 192)">A</span></p>
+        <p><span style="background-color: rgb(192, 192, 64)">A</span></p>
+        <p><span style="background-color: rgb(192, 192, 192)">A</span></p>
     </div>
     <div class="modal-footer">
         <a href="#" class="btn btn-primary btn-success" data-dismiss="modal">Got It!</a>
