--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -74,21 +74,13 @@ $(function() {
         <p>
             <span class="control_key big">=</span> Zoom In<br>
             <span class="control_key big">-</span> Zoom Out<br>
-            <span class="control_key big">
+            <span class="control_key big" style="position: relative; top: 8px">
                 <i class="icon-arrow-left"></i>
                 <i class="icon-arrow-up"></i>
                 <i class="icon-arrow-down"></i>
                 <i class="icon-arrow-right"></i>
             </span> Move Camera
         </p>
-        <p><span style="background-color: rgb(64, 64, 64)">A</span></p>
-        <p><span style="background-color: rgb(64, 192, 64)">A</span></p>
-        <p><span style="background-color: rgb(64, 64, 192)">A</span></p>
-        <p><span style="background-color: rgb(64, 192, 192)">A</span></p>
-        <p><span style="background-color: rgb(192, 64, 64)">A</span></p>
-        <p><span style="background-color: rgb(192, 64, 192)">A</span></p>
-        <p><span style="background-color: rgb(192, 192, 64)">A</span></p>
-        <p><span style="background-color: rgb(192, 192, 192)">A</span></p>
     </div>
     <div class="modal-footer">
         <a href="#" class="btn btn-primary btn-success" data-dismiss="modal">Got It!</a>
