--- a/game/templates/game/base.html
+++ b/game/templates/game/base.html
@@ -39,7 +39,7 @@
 
 </div>
 
-<!-- At th end of the file so that rendering is not slowed down by HTTP requests. -->
+<!-- At the end of the file so that rendering is not slowed down by HTTP requests. -->
 <script type="text/javascript" src="/static/js/jquery-1.7.2.min.js"></script>
 <script type="text/javascript" src="/static/js/bootstrap-modal.js"></script>
 <script type="text/javascript" src="/static/js/common-error-modals.js"></script>
