Fixed chrome bug?

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -6,7 +6,7 @@
     <script type="text/javascript" src="/static/js/game-controls.js"></script>
 <script type = "text/javascript">
 paper.install(window);
-$(function() {
+$(window).load(function() {
     paper.setup('canvas');
 
     $('#canvas').css('height', '600px');
