--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -25,6 +25,7 @@ $(window).load(function() {
             localPlayer.animateDeath();
             for (var i = 0; i < snailGroupList.length; i++) {
                 snailGroupList[i].move();
+                snailGroupList[i].
             }
             for (var i = 0; i < playerList.length; i++) {
                 var player = playerList[i];
