--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -25,7 +25,9 @@ $(window).load(function() {
             localPlayer.animateDeath();
             for (var i = 0; i < snailGroupList.length; i++) {
                 snailGroupList[i].move();
-                snailGroupList[i].
+            }
+            for (var i = 0; i < deadSnailList.length; i++) {
+                deadSnailList[i].animateDeath();
             }
             for (var i = 0; i < playerList.length; i++) {
                 var player = playerList[i];
