--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -132,7 +132,7 @@ $(window).load(function() {
 
 <canvas id="canvas" class="grid_9 alpha"></canvas>
 <div class="grid_3 alpha">
-    <div style="padding: 10px; height: 530px">
+    <div style="padding: 10px; height: 370px">
         <p style="text-align: right; float: right; margin-top: 5px; margin-bottom: 10px">Ammo: <span id="ammo_display">5</span> / 5</p>
         <p title="It is your turn now. Please choose an action below and click GO."><span id="your_turn_display">YOUR TURN</span></p>
         <p style="clear: both"></p>
@@ -182,6 +182,11 @@ $(window).load(function() {
         </p>
         {% endwith %}
         <p id="instruction_label"></p>
+    </div>
+
+    <!-- List of players -->
+    <div style="height: 160px; overflow: scroll">
+        <ul id="players_list"></ul>
     </div>
 
     <div style="padding: 10px">
