Improved Join/Create Game screens

--- a/game/templates/game/create_game.html
+++ b/game/templates/game/create_game.html
@@ -19,7 +19,7 @@
 
 {% block content %}
     <div class="grid_4 push_4" style="text-align: center; padding-top: 10px">
-        <p>List of Players:</p>
+        <h3>List of Players:</h3>
         
         <div id="player_list"></div>
 
