--- a/game/static/css/style.css
+++ b/game/static/css/style.css
@@ -23,6 +23,17 @@ margin-bottom: 20px;
 margin-top: 15px;
 }
 
+h3 {
+margin-bottom: 5px;
+}
+
+a {
+color: green;
+}
+a:hover {
+color: #000;
+}
+
 #content_box {
 background-color: #eee;
 border: 1px solid #bbb;
@@ -60,11 +71,12 @@ margin-bottom: -10px;
 #player_list {
 margin-bottom: 20px;
 width: 100%;
+min-height: 150px;
 border: 1px solid #bbb; 
 text-align: left;
--webkit-border-radius: 2px;
--moz-border-radius: 2px;
-border-radius: 2px;
+-webkit-border-radius: 5px;
+-moz-border-radius: 5px;
+border-radius: 5px;
 }
 
 #player_list p {
@@ -78,12 +90,13 @@ font-weight: bold;
 
 #game_list {
 width: 100%;
+min-height: 150px;
 border: 1px solid #bbb; 
 text-align: left;
 margin-bottom: 20px;
--webkit-border-radius: 2px;
--moz-border-radius: 2px;
-border-radius: 2px;
+-webkit-border-radius: 5px;
+-moz-border-radius: 5px;
+border-radius: 5px;
 }
 
 #game_list p {
@@ -110,6 +123,7 @@ padding-top: 10px;
 }
 
 #joined_game_instructions {
+text-align: center;
 display: none;
 }
 
