Death modal done

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -84,7 +84,7 @@ $(window).load(function() {
         <p>You have been eaten by snails... :(</p>
         <p>&nbsp;</p>
         <p>Your score:</p>
-        <p>Nothing</p>
+        <p id="modal_score">Nothing</p>
     </div>
     <div class="modal-footer">
         <a href="#" class="btn btn-primary btn-success" data-dismiss="modal">I am very sad</a>
