not sure if this works, score doesn't seem to update

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -81,10 +81,9 @@ $(window).load(function() {
         <h3>Game Over</h3>
     </div>
     <div class="modal-body">
-        <p>You have been eaten by snails... :(</p>
+        <p>You were eaten by snails...</p>
         <p>&nbsp;</p>
-        <p>Your score:</p>
-        <p id="modal_score">Nothing</p>
+        <p>Your score: <span id="score_display">0</span></p>
     </div>
     <div class="modal-footer">
         <a href="#" class="btn btn-primary btn-success" data-dismiss="modal">I am very sad</a>
