this DOES seem to work

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -83,7 +83,7 @@ $(window).load(function() {
     <div class="modal-body">
         <p>You were eaten by snails...</p>
         <p>&nbsp;</p>
-        <p>Your score: <span id="score_display">0</span></p>
+        <p>Your score: <span id="final_score_display">0</span></p>
     </div>
     <div class="modal-footer">
         <a href="#" class="btn btn-primary btn-success" data-dismiss="modal">I am very sad</a>
