Link to the leaderboard on the index page

--- a/game/templates/game/base.html
+++ b/game/templates/game/base.html
@@ -37,6 +37,8 @@
     {% block content %}{% endblock %}
 </div>
 
+{% block footer %}{% endblock %}
+
 </div>
 
 <!-- At the end of the file so that rendering is not slowed down by HTTP requests. -->
