--- a/game/templates/game/index.html
+++ b/game/templates/game/index.html
@@ -40,3 +40,7 @@
     
     <div class="grid_1"><p>&nbsp;</p></div>
 {% endblock %}
+
+{% block footer %}
+    <p style="text-align: center"><a href="#">Check out the leaderboard</a></p>
+{% endblock %}
