--- a/game/templates/game/index.html
+++ b/game/templates/game/index.html
@@ -42,5 +42,5 @@
 {% endblock %}
 
 {% block footer %}
-    <p style="text-align: center"><a href="#">Check out the leaderboard</a></p>
+    <p style="text-align: center"><a href="{% url leaderboard %}">Check out the leaderboard</a></p>
 {% endblock %}
