Watch this game button added

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -86,6 +86,7 @@ $(window).load(function() {
         <p>Your score: <span id="final_score_display">0</span></p>
     </div>
     <div class="modal-footer">
+        <a href="#" class="btn btn-success" data-dismiss="modal">Watch this game</a>
         <a id="btn_show_leaderboard" href="#" data-href="{% url leaderboard %}" class="btn btn-success" data-dismiss="modal">Show me the leaderboard</a>
         <a id="btn_play_new_game" href="#" data-href="{% url index %}" class="btn btn-primary btn-success" data-dismiss="modal">Play new game</a>
     </div>
