Finally got the cheat modal working

--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -92,6 +92,17 @@ $(window).load(function() {
     </div>
 </div>
 
+<div id="cheat_modal" class="modal hide">
+    <div class="modal-header">
+        <h3>That didn't work&hellip;</h3>
+    </div>
+    <div class="modal-body">
+        <p><img src="/static/img/cheating.jpg" alt="" /></p>
+    </div>
+    <div class="modal-footer">
+        <a href="#" class="btn btn-success" data-dismiss="modal">I won't cheat again</a>
+    </div>
+</div>
 
 <div id="instructions_modal" class="modal hide">
     <div class="modal-header">
